--- a/Module 1/5. HTML Form & Table/Bài tập/Tạo bảng đơn giản/css/style.css
+++ b/Module 1/5. HTML Form & Table/Bài tập/Tạo bảng đơn giản/css/style.css
@@ -1,4 +1,5 @@
-table:nth-child(3) {
+#timeable {
+  width: 100%;
   border: 2px solid black;
   border-collapse: collapse;
 }
@@ -6,11 +7,37 @@ table:nth-child(3) {
 #timeable th,
 #timeable td {
   border: 2px solid black;
+  padding: 10px;
 }
 
 #day {
   background-color: yellow;
 }
-#day:first-child{
-    background-color: white;
+
+#day th:nth-child(1) {
+  background-color: white;
+}
+
+#title {
+  background-color: rgb(248, 161, 102);
+}
+
+#info {
+  width: 90%;
+  margin: auto;
+  color: rgb(80, 80, 247);
+}
+
+#info td:nth-child(even) {
+  text-align: right;
+}
+
+#info td {
+  padding: 3px;
+}
+
+h2 {
+  text-align: center;
+  color: blue;
+  font-size: xx-large;
 }
