--- a/Module 4/Casestudy/furama-resort/src/main/resources/templates/login.html
+++ b/Module 4/Casestudy/furama-resort/src/main/resources/templates/login.html
@@ -27,7 +27,6 @@
 							<div class="form-group">
 								<label for="username">Username</label>
 								<input type="text" th:field="*{username}" id="username" class="form-control">
-								<span th:errors="*{username}" class="text-danger"></span>
 							</div>
 							<div class="form-group">
 								<label for="password">Password</label>
@@ -39,15 +38,15 @@
 										</span>
 									</div>
 								</div>
-								<p class="text-danger" th:errors="*{password}"></p>
-								<p th:if="${loginFail}" class="text-danger"></p>
-							</div>
-							<div class="custom-control custom-checkbox">
-								<input type="checkbox" class="custom-control-input" name="remember-me"
-								       id="checkRemember">
-								<label for="checkRemember" class="custom-control-label">Remember me</label>
-							</div>
-							<button type="submit" class="btn btn-primary mt-4">Login</button>
+								<div th:if="${param.error}">
+									<p class="text-danger">Wrong username or password</p>
+								</div>
+								<div class="custom-control custom-checkbox mt-3">
+									<input type="checkbox" class="custom-control-input" name="remember-me"
+									       id="remember-me">
+									<label for="remember-me" class="custom-control-label">Remember me</label>
+								</div>
+								<button type="submit" class="btn btn-primary mt-4">Login</button>
 						</form>
 					</div>
 				</div>
